--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "json-fn",
+  "name": "@atc-group/json-fn",
   "version": "1.1.3",
   "author": "Vadim Kiryukhin <vkiryukhin@gmail.com>",
   "description": "javascript plugin to stringify, parse and clone javascript objects with Functions, RegExp and Date.",
@@ -13,7 +13,14 @@
     "type": "git",
     "url": "https://github.com/vkiryukhin/jsonfn"
   },
-  "main":"./jsonfn",
+  "source": "jsonfn.js",
+  "main": "dist/jsonfn.js",
+  "publishConfig": {
+    "access": "public"
+  },
+  "files": [
+    "dist"
+  ],
   "keywords": [
     "stringify object with function",
     "stringify object with regexp",
@@ -24,5 +31,12 @@
   "license": "MIT",
   "engine": {
     "node": ">=0.4.9"
+  },
+  "devDependencies": {
+    "parcel": "^2.13.3"
+  },
+  "scripts": {
+    "build": "parcel build",
+    "prepack": "npm run build"
   }
 }
